# pipecheck

./: .gitattributes  CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md
.github/workflows/: msrv-check.yml
src/: lib.rs  pipecheck.rs
